# minify-js

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
minify_js/: __init__.py  core.py
tests/: test_minify_js.py
